[package]
name = "lum_libs"
version = "0.2.4"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.85.0"
description = "Serves as a central collection and re-export of all external crates used in the lum framework to ensure consistent dependency versions across the framework"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_libs"
license = "MIT"
keywords = ["framework"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
async-trait = { version = "0.1.88", optional = true }
dirs = { version = "6.0.0", optional = true }
downcast-rs = { version = "2.0.1", features = ["std"], optional = true }
fern = { version = "0.7.0", features = ["colored", "date-based"], optional = true }
humantime = { version = "2.2.0", optional = true }
log = { version = "0.4.27", features = ["serde", "std"], optional = true }
rustls = { version = "0.23.28", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-env = { version = "0.2.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
serenity = { version = "0.12.4", features = ["full"], optional = true }
tokio = { version = "1.45.1", features = ["full"], optional = true }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde", "macro-diagnostics"], optional = true }
