[package]
name = "lum_libs"
version = "0.2.9"
authors = ["Torben Schweren"]
edition = "2024"
rust-version = "1.88.0"
description = "Serves as a central collection and re-export of all external crates used in the lum framework to ensure consistent dependency versions across the framework"
readme = "README.md"
repository = "https://github.com/lum-rs/lum_libs"
license = "MIT"
keywords = ["framework"]
exclude = [".devcontainer", ".github", ".vscode"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]
async-trait = { version = "0.1.89", optional = true }
dashmap = { version = "6.1.0", features = ["serde"], optional = true }
dirs = { version = "6.0.0", optional = true }
downcast-rs = { version = "2.0.2", features = ["std"], optional = true }
humantime = { version = "2.3.0", optional = true }
log = { version = "0.4.28", features = ["serde", "std"], optional = true }
log4rs = { version = "1.4.0", features = ["all_components", "background_rotation", "compound_policy", "config_parsing", "console_appender", "delete_roller", "file_appender", "fixed_window_roller", "gzip", "json_encoder", "onstartup_trigger", "pattern_encoder", "rolling_file_appender", "size_trigger", "threshold_filter", "time_trigger", "yaml_format"], optional = true }
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision", "send_guard"], optional = true }
rustls = { version = "0.23.35", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-env = { version = "0.2.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
serenity = { version = "0.12.4", features = ["full"], optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde", "macro-diagnostics"], optional = true }
